# -optimization_methods_lab_03

./: CMakeLists.txt
include/: branch_and_bound_method.hpp
sources/: branch_and_bound_method.cpp  main.cpp
